Thu Aug 18 16:33:33 1994  Theodore Y. Ts'o  (tytso at tsx-11)

	* fcc_retrv.c (srvname_match): Fix bug in srvname_match where so
	that the server realm is really ignored in the compare, like it's
	supposed to be.

Mon Jun 20 19:36:19 1994  Theodore Y. Ts'o  (tytso at tsx-11)

	* fcc.h: #include <krb5/osconf.h> so that build works using imake.

